# tango

./: .eslintrc.json  .gitignore  .gitmodules  CREDITS.md  Cargo.toml  README.md  about.toml  crowdin.yml  deny.toml  games.toml  make_mac_app.sh  package-lock.json  package.json  replay_battle1.tangoreplay  tsconfig.json  update-bin.sh
core/: .gitignore  Cargo.toml  README.md  get-windows-sdl.sh
core/.github/workflows/: release.yaml
core/datachannel-wrapper/: Cargo.toml
core/datachannel-wrapper/src/: lib.rs
core/glowfb/: Cargo.toml  README.md
core/glowfb/src/: lib.rs  shader_version.rs  vao.rs
core/hqx/: LICENSE-MIT
core/hqx/src/: hq2x.rs  hq3x.rs  hq4x.rs
core/input-helper/: Cargo.toml
core/input-helper/src/: lib.rs
core/keymaptool/: Cargo.toml  build.rs
core/keymaptool/src/: main.rs
core/mgba-sys/: Cargo.toml  build.rs
core/mgba/src/: arm_core.rs  blip.rs  core.rs  gba.rs  lib.rs  log.rs  thread.rs  timing.rs  trapper.rs  vfile.rs
core/mmpx/: .gitignore  Cargo.toml  LICENSE.md
core/mmpx/src/: lib.rs  neighborhood.rs
core/sdl2-input-helper/: Cargo.toml
core/sdl2-input-helper/src/: lib.rs
core/tango-core/: Cargo.toml  build.rs
core/tango-core/src/: audio.rs  battle.rs  config.rs  facade.rs  fastforwarder.rs  font.rs  game.rs  gui.rs  hooks.rs  input.rs  ipc.rs  lib.rs  lockstep.rs  main.rs  negotiation.rs  net.rs  protocol.rs  replay.rs  replayer.rs  session.rs  shadow.rs  signaling.rs  transport.rs
core/tango-lobby/: Cargo.toml
core/tango-lobby/src/: main.rs  signaling.rs
core/tango-protos/: build.rs
core/tango-server/: Cargo.toml
core/tango-signaling/: Cargo.toml
core/tango-signaling-server/: Cargo.toml
discord-ipc/: Cargo.toml  README.md
discord-ipc/src/: activity.rs  lib.rs
keymaptool/: Cargo.toml
keymaptool/src/: main.rs
libdatachannel/: Cargo.toml  LICENSE
libdatachannel/libdatachannel-sys/: Cargo.toml  build.rs
libdatachannel/src/: lib.rs
mgba-siolink/: Cargo.toml  README.md
mgba-siolink/examples/: link_bench.rs  netplay_demo.rs  pair_bench.rs
mgba-siolink/src/: lib.rs  replay.rs  session.rs  testrom.rs  throttler.rs
mgba-siolink/tests/: fidelity.rs  hotplug.rs  loopback.rs  netplay.rs
nettai-client/: Cargo.toml  build.rs
nettai-client/src/: lib.rs  protocol.proto  protocol.rs
nettai-server/: Cargo.toml
nettai-server/src/: main.rs  randomcode.rs
sdl3-gamepad/: Cargo.toml
sdl3-gamepad/src/: lib.rs
tango/: .gitignore  Cargo.toml  build.rs  resource.rc  tango.exe.manifest
tango-core/: Cargo.toml
tango-core/src/: audio.rs  battle.rs  current_input.rs  datachannel.rs  facade.rs  fastforwarder.rs  game.rs  gui.rs  hooks.rs  input.rs  ipc.rs  lib.rs  main.rs  negotiation.rs  protocol.rs  replay.rs  shadow.rs  tps.rs  transport.rs
tango-dataview/: Cargo.toml  README.md
tango-dataview/src/: abd.rs  auto_battle_data.rs  lib.rs  msg.rs  navicust.rs  rom.rs  save.rs
tango-filesync/: Cargo.toml
tango-filesync/src/: lib.rs
tango-gamesupport/: Cargo.toml
tango-gamesupport/src/: golden.rs  lib.rs
tango-lobby/: Cargo.toml  build.rs
tango-lobby/src/: client.rs  friend_code.rs  lib.rs
tango-match/: ARCHITECTURE.md  Cargo.toml
tango-match/examples/: predictor-eval.rs  replay_inspect.rs
tango-match/src/: analysis.rs  engine.rs  input.rs  lib.rs  playback.rs  telemetry.rs
tango-matchmaking/: Cargo.toml
tango-matchmaking/src/: client.rs  protocol.rs  server.rs
tango-net-protocol/: Cargo.toml
tango-net-protocol/src/: channel_spec.rs  control.rs  data.rs  derive.rs  lib.rs
tango-ng/: Cargo.toml  build.rs
tango-ng/src/: audio.rs  bnlc.rs  config.rs  crash_log.rs  discord.rs  game.rs  i18n.rs  icons.rs  identity.rs  input.rs  lib.rs  loaded.rs  main.rs  navicust.rs  net.rs  netplay.rs  patch.rs  pvp.rs  pvp_session.rs  randomcode.rs  replay_session.rs  replays.rs  rom.rs  rom_overrides.rs  save.rs  save_edit.rs  save_manage.rs  save_view.rs  scrubber.rs  selection.rs  session.rs  singleplayer_session.rs  stats.rs  updater.rs  video.rs  widgets.rs
tango-ng/ui/: app.slint
tango-patch/: Cargo.toml
tango-patch/src/: bundle.rs  index.rs  layout.rs  lib.rs  manifest.rs  overrides.rs  package.rs  tag.rs
tango-patch/tests/: index.rs  packages.rs
tango-pvp/: ARCHITECTURE.md  Cargo.toml  build.rs
tango-pvp/examples/: predictor-eval.rs  replay_inspect.rs
tango-pvp/src/: TODO  analysis.rs  battle.rs  custom_screen.rs  engine.rs  eval.rs  game.rs  hooks.rs  input.rs  lib.rs  net.rs  playback.rs  replay.rs  replayer.rs  shadow.rs  stepper.rs  sync.rs  telemetry.rs
tango-pvp/tests/: custom_re.rs  golden.rs
tango-replaytool/: Cargo.toml
tango-replaytool/src/: main.rs
tango-rtc/: Cargo.toml
tango-rtc/src/: driver.rs  gather.rs  lib.rs
tango-rtc/tests/: loopback.rs  loss.rs
tango-server/: Cargo.toml
tango-server/src/: iceconfig.rs  main.rs  matchmaking.rs
tango-session/: Cargo.toml
tango-session/src/: audio.rs  core_stream.rs  lib.rs  pvp.rs  replay.rs  singleplayer.rs  stats_cache.rs  training.rs
tango-signaling/: Cargo.toml
tango-signaling/src/: client.rs  lib.rs  proto.rs
tango-siolink/: Cargo.toml
tango-siolink/examples/: netplay_demo.rs  pair_bench.rs
tango-siolink/src/: lib.rs  replay.rs  session.rs  testrom.rs
tango-siolink/tests/: fidelity.rs  loopback.rs  netplay.rs
tango-web/: Cargo.toml  Dioxus.toml  build.rs  sw.js
tango-web-worklet/: Cargo.toml
tango-web-worklet/src/: lib.rs
tango-web/assets/: audio-worklet.js  style.css
tango-web/src/: analysis.rs  compat.rs  config.rs  i18n.rs  library.rs  main.rs  patches.rs  rom_overrides.rs
tango/src/: anim.rs  app.rs  audio.rs  battle.rs  bnlc.rs  config.rs  controller.rs  copy_feedback.rs  crash_log.rs  discord.rs  filesync.rs  fonts.rs  game.rs  gamepad.rs  games.rs  graphics.rs  gui.rs  i18n.rs  identity.rs  input.rs  input_capture.rs  keyboard.rs  lib.rs  loadout.rs  lobby.rs  lockstep.rs  main.rs  navicust.rs  navicust_editor.rs  net.rs  netplay.rs  patch.rs  protocol.rs  pvp_session.rs  randomcode.rs  replay.rs  replay_export.rs  replay_session.rs  replayer.rs  replays.rs  (+22 more)
(+1373 files in other folders)
