[workspace]
resolver = "2"
members = [
    "bps",
    "datachannel-wrapper",
    "input-helper",
    "mgba",
    "getgud",
    "tango",
    "tango-dataview",
    "tango-filesync",
    "tango-gamedb",
    "tango-pvp",
    "tango-replaytool",
    "tango-signaling",
]

# No profile section previously existed, so release builds used Cargo's
# defaults (lto = false, codegen-units = 16). For a CPU-bound emulator the
# hot Rust paths (mgba fastforwarder, getgud rollback, stepper, hqx/mmpx
# upscalers) benefit measurably from cross-crate inlining. Thin LTO gets
# most of fat LTO's runtime win at a fraction of the build-time cost;
# codegen-units = 1 maximizes per-crate optimization of the tight loops.
# mgba's C side is unaffected (it's a separate cmake static lib already
# built -O3 -DNDEBUG).
[profile.release]
lto = "thin"
codegen-units = 1

[workspace.lints.clippy]
new_without_default = "allow"
type_complexity = "allow"
identity_op = "allow"
blocks_in_conditions = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
needless_lifetimes = "allow"
