[workspace]
resolver = "2"
members = [
    "tango",
    "tango-dataview",
    "tango-gamesupport",
    "tango-pvp",
]
# One source of truth for every external dep shared by 2+ member crates,
# so versions can't silently drift apart (we shipped four itertools and
# two statically-linked zstd C libraries before this existed). Members
# inherit with `dep.workspace = true` and add their own features on top.
[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytemuck = "1"
byteorder = "1"
crc32fast = "1"
futures = "0.3"
# The engine crates (pulled out of this workspace so gbaroll can depend
# on them without cloning tango).
getgud = { git = "https://github.com/tangobattle/getgud" }
image = { version = "0.25", default-features = false }
itertools = "0.13"
log = "0.4"
mgba = { git = "https://github.com/tangobattle/mgba-rs" }
mgba-siolink = { git = "https://github.com/tangobattle/mgba-siolink" }
num-derive = "0.4.2"
num-traits = "0.2"
prost = "0.14"
prost-build = "0.14"
rand = "0.8"
rand_pcg = { version = "0.3", features = ["serde1"] }
rennet = { git = "https://github.com/tangobattle/rennet" }
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = "1"
tokio-util = "0.7"
zstd = "0.13"

# `release` keeps Cargo's defaults (lto = false, codegen-units = 16) so
# iterative release builds and `cargo run --release` stay cheap. Shipped
# binaries use the `release-dist` profile below — the platform build scripts
# (win/macos/linux) pass `--profile release-dist`.
#
# For a CPU-bound emulator the hot Rust paths (mgba fastforwarder, getgud
# rollback, stepper) benefit measurably from cross-crate inlining. Thin LTO
# gets most of fat LTO's runtime win at a fraction of the build-time cost;
# codegen-units = 1 maximizes per-crate optimization of the tight loops.
# mgba's C side is unaffected (it's a separate cmake static lib already built
# -O3 -DNDEBUG).
[profile.release-dist]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = 1

[workspace.lints.clippy]
# False positive on `GameRef` (= `&'static Game`) map keys: `Game` holds
# lazily-decoded caches (interior mutability), but its Hash/Eq go by
# static address, so keys can't destabilize.
mutable_key_type = "allow"
new_without_default = "allow"
type_complexity = "allow"
identity_op = "allow"
blocks_in_conditions = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
needless_lifetimes = "allow"
