[workspace]
resolver = "2"
members = [
    "mgba",
    "tango-core",
    "tango-protos",
    "tango-signaling-server",
    "mgba-sys",
    "keymaptool",
    "datachannel-wrapper",
    "sdl2-input-helper",
]

[patch.crates-io]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "541f49af58fb55b678d0b209fc354a13a54318dd" }
