[workspace]
resolver = "2"
members = [
    "mgba",
    "tango-core",
    "tango-protos",
    "tango-signaling-server",
    "mgba-sys",
    "keymaptool",
    "datachannel-wrapper",
    "hqx",
    "mmpx",
    "sdl2-input-helper",
]

[patch.crates-io]
sdl2 = { git = "https://github.com/tangobattle/rust-sdl2", rev = "41e9250f1ef527034ee7ef28a1a1996b8019f49d" }
