[workspace]
resolver = "2"
members = [
    "mgba",
    "tango-core",
    "tango-protos",
    "tango-signaling-server",
    "mgba-sys",
    "keymaptool",
    "datachannel-wrapper",
    "hqx",
    "mmpx",
    "sdl2-input-helper",
]

[patch.crates-io]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "bae03beaafc0040b8166d36a4bdbe570a05aa52a" }
