[package]
name = "discord-ipc"
version = "0.1.0"
edition = "2021"
description = "Async Discord rich-presence IPC client (local socket / named pipe), transport- and runtime-agnostic over tokio."

[dependencies]
byteorder.workspace = true
bytes = "1"
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-hex.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync", "rt"] }
log.workspace = true

[lints]
workspace = true
