[package]
name = "keymaptool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
winit = { version = "0.26.1", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4"
serde_plain = "1.0"
serde = "1.0"
