[package]
name = "nettai-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16", features = ["rustls-tls-webpki-roots"] }
prost = "0.10"

[build-dependencies]
prost-build = "0.10"
