[package]
name = "nettai-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3"
futures-util = "0.3"
prost = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.17"

[build-dependencies]
prost-build = "0.10"
