[package]
name = "nettai-client"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.21"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
prost = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tungstenite = "0.17"

[build-dependencies]
prost-build = "0.10"
