[package]
name = "nettai-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
futures-util = "0.3"
hyper = "0.14"
hyper-tungstenite = "0.8"
log = "0.4"
nettai-client = { path = "../nettai-client" }
once_cell = "1"
prost = "0.10"
rand = "0.8"
routerify = "3"
semver = "1"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17"
