[package]
name = "nettai-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
bincode = "1"
byteorder = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
hmac = "0.12"
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.8"
log = "0.4"
nettai-client = { path = "../nettai-client" }
once_cell = "1"
rand = "0.4"
prost = "0.10"
semver = "1"
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tungstenite = "0.17"
