[package]
name = "tango-core"
version = "3.0.0-alpha.9"
edition = "2021"
license = "AGPL-3.0-or-later"
default-run = "tango-core"

[dependencies]
anyhow = "1.0"
env_logger = "0.9.0"
winit = { version = "0.26.1", features = ["serde"] }
wgpu = { version = "0.12", features = ["angle"] }
cpal = "0.13.5"
pixels = "0.9.0"
zstd = "0.11.1"
lazy_static = "1.4.0"
log = "0.4"
tokio = { version = "1.15.0", features = ["full"] }
parking_lot = { version = "0.12.0", features = ["deadlock_detection"] }
rand = "0.8.5"
sha3 = "0.10.1"
tokio-util = "0.7.1"
tokio-stream = "0.1.8"
subtle = "2.4"
rand_pcg = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
git-version = "0.3.5"
bytes = "1.1.0"
bincode = "1.3.3"
byteorder = "1.4.3"
time = { version = "0.3.9", features = ["formatting", "macros"] }
futures-util = "0.3.21"
clap = { version = "3.1", features = ["derive"] }
tango-matchmaking = { path = "../tango-matchmaking" }
mgba = { path = "../mgba" }
tempfile = "3.3.0"
shell-words = "1.1"
serde_json = "1.0"
url = "2.2"
typescript-type-def = "0.5"
serde_plain = "1.0"
egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = { version = "0.17", default-features = false }
datachannel-wrapper = { path = "../datachannel-wrapper" }
gilrs = "0.7"

[build-dependencies]
winres = "0.1"
