[package]
name = "tango-dataview"
version = "4.0.51"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
bitvec = "1"
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1"
c2rust-bitfields = "0.17"
image = { version = "0.24", default_features = false }
itertools = "0.6"
ndarray = "0.15"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
patricia_tree = "0.5"
thiserror = "1"
