[package]
name = "tango-dataview"
version = "4.0.51"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
bitvec = "1"
bytemuck = { workspace = true, features = ["derive", "const_zeroed"] }
byteorder.workspace = true
c2rust-bitfields = "0.22"
image.workspace = true
itertools.workspace = true
ndarray = "0.15"
num-derive.workspace = true
num-traits.workspace = true
patricia_tree = "0.5"
thiserror.workspace = true

[lints]
workspace = true
