[package]
name = "tango-filesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
