[package]
name = "tango-filesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
futures.workspace = true
serde.workspace = true
serde-hex.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
