[package]
name = "tango-gamesupport"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
crc32fast.workspace = true
image.workspace = true
tango-dataview = { path = "../tango-dataview" }
tango-pvp = { path = "../tango-pvp" }
thiserror.workspace = true
# Only pulled in by the `testing` feature, for the golden-replay
# determinism harness the per-game crates run in their tests.
anyhow = { workspace = true, optional = true }
mgba = { path = "../mgba", optional = true }
sha2 = { workspace = true, optional = true }

[features]
# Exposes `golden`, the shared determinism harness each
# `tango-gamesupport-<game>` crate drives from its own golden replays.
testing = ["dep:anyhow", "dep:mgba", "dep:sha2"]

[lints]
workspace = true
