[package]
name = "tango-gamesupport"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
crc32fast.workspace = true
image.workspace = true
tango-dataview = { path = "../tango-dataview" }
tango-match = { path = "../tango-match" }
thiserror.workspace = true

[lints]
workspace = true
