[package]
name = "tango-lobby"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = [
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:rustls",
  "dep:webpki-roots",
  "dep:futures-util",
]

[dependencies]
log = "0.4"
prost = "0.14"
thiserror = "1"
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
# Pinned to the same versions tokio-tungstenite 0.16 pulls (rustls 0.20,
# webpki-roots 0.22) so cargo unifies a single rustls in the graph — we build
# the client `ClientConfig` ourselves to attach the mTLS client certificate
# (see `client::build_tls_config`).
rustls = { version = "0.20", optional = true }
webpki-roots = { version = "0.22", optional = true }
tokio-tungstenite = { version = "0.16", features = [
  "rustls-tls-webpki-roots",
], optional = true }

[build-dependencies]
prost-build = "0.14"

[lints]
workspace = true
