[package]
name = "tango-match"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
bytemuck.workspace = true
log.workspace = true
mgba.workspace = true
serde.workspace = true
serde_repr = "0.1"
getgud.workspace = true
mgba-rollback.workspace = true

# For the examples only — the library itself doesn't touch replay files.
[dev-dependencies]
tango-replay = { path = "../tango-replay" }

[lints]
workspace = true
