[package]
name = "tango-ng"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false
build = "build.rs"

# The app is a library so both entry points can share it: the desktop
# bin below, and (once the NDK story lands) Android's android_main via
# a cdylib. gamesupport features gate per-game deps, so the lib keeps
# the same feature surface.
[lib]
name = "tango_ng"
path = "src/lib.rs"
# rlib for the desktop bin; cdylib is what an Android APK loads.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "tango-ng"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.17"

[dependencies]
slint = "1.17"
# Gamepad input. Created in main on the UI thread (its platform
# backends aren't Send) and polled by the 16ms frame timer.
gilrs = "0.11"
# Mobile-safe audio output (AAudio on Android, CoreAudio on macOS/iOS,
# WASAPI on Windows) — deliberately not SDL, which is the one piece of
# the old frontend's stack that doesn't travel to mobile cleanly.
cpal = "0.18"
mgba = { path = "../mgba" }
tango-dataview = { path = "../tango-dataview" }
tango-gamesupport = { path = "../tango-gamesupport" }
tango-pvp = { path = "../tango-pvp" }
tango-rtc = { path = "../tango-rtc" }
tango-signaling = { path = "../tango-signaling" }
rennet = { path = "../rennet" }
# tango relied on iced's bundled runtime; tango-ng owns one explicitly
# (rt-multi-thread), created in main and threaded around as a Handle.
tokio = { workspace = true, features = ["fs", "io-util", "time", "rt", "rt-multi-thread", "net", "sync", "macros"] }
tokio-util = { workspace = true, features = ["io", "rt"] }
async-trait.workspace = true
futures.workspace = true
bincode = "1"
rand.workspace = true
rand_pcg.workspace = true
sha3 = "0.10"
subtle = "2"
zstd.workspace = true
# The persistent client identity (identity.rs): a self-signed TLS client
# cert. rcgen mints it, rustls-pemfile reads it back from the PEM on disk
# as the DER `tango_signaling::ClientIdentity` wants, sha2 derives the
# SHA-256 fingerprint we log. Same pins as the tango crate.
rcgen = "0.11"
rustls-pemfile = "1"
sha2.workspace = true
bps = { path = "../bps" }
semver = { version = "1", features = ["serde"] }
chrono = "0.4"
toml = "0.8"
regex = "1"
tango-filesync = { path = "../tango-filesync" }
# Patch info.toml author strings are RFC 5322 mailboxes ("Name <a@b>");
# mailparse reduces them to display names, like tango's patch scanner.
mailparse = "0.14"
tango-gamesupport-bn1 = { path = "../gamesupport/tango-gamesupport-bn1", optional = true }
tango-gamesupport-bn2 = { path = "../gamesupport/tango-gamesupport-bn2", optional = true }
tango-gamesupport-bn3 = { path = "../gamesupport/tango-gamesupport-bn3", optional = true }
tango-gamesupport-bn4 = { path = "../gamesupport/tango-gamesupport-bn4", optional = true }
tango-gamesupport-bn5 = { path = "../gamesupport/tango-gamesupport-bn5", optional = true }
tango-gamesupport-bn6 = { path = "../gamesupport/tango-gamesupport-bn6", optional = true }
tango-gamesupport-exe45 = { path = "../gamesupport/tango-gamesupport-exe45", optional = true }
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger = "0.9"
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true
walkdir = "2"
zip = "2"
steamlocate = "2"
directories-next = "2"
fluent-templates = "0.14"
unic-langid = { version = "0.9", features = ["likelysubtags"] }
# png only, for the --smoke framebuffer dump.
image = { workspace = true, features = ["png"] }
hqx = "0.1"
mmpx = "0.2"

# Desktop-only pieces (mobile builds compile the call sites to no-ops
# in main.rs): arboard backs the save viewer's copy-as-text/-image
# buttons; open backs the open-folder actions.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Patch-repo sync (patch::update): index.json fetch + file downloads.
# Same pins as the tango crate. Lives in the per-target tables because
# target-specific deps only ADD features — mobile must not inherit
# native-tls (no system OpenSSL on the NDK), so each target names its
# own TLS backend.
reqwest = { version = "0.11", features = ["stream", "json", "native-tls"], default-features = false }
arboard = "3"
open = "5"
# Discord rich presence (workspace IPC client) — no mobile Discord IPC.
discord-ipc = { path = "../discord-ipc" }

# Android: the Slint android-activity backend (adds slint::android and
# the android_main glue in lib.rs). Feature union only applies when
# actually building for android, so desktop builds are untouched.
[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.17", features = ["backend-android-activity-06"] }
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls"], default-features = false }
# logcat sink; env_logger has nowhere to write on Android.
android_logger = "0.14"
# Slint's android backend leaves the activity-glue flavor to the app:
# NativeActivity (not GameActivity) — it's what cargo-apk packages by
# default, no Java/Kotlin shim needed.
android-activity = { version = "0.6", features = ["native-activity"] }

# cargo-apk packaging (`cargo apk build -p tango-ng --lib`). The APK
# loads the cdylib via NativeActivity; needs an NDK install + the mgba
# cmake toolchain wired up (the remaining hard part) to actually link.
[package.metadata.android]
package = "net.n1gp.tango_ng"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 30
target_sdk_version = 34

[package.metadata.android.application]
label = "Tango NG"

[features]
# Mirrors the tango crate: each game's support is an optional dependency
# gated behind its own feature; no games compile in by default. Build with
# `--features gamesupport-all`.
default = []
gamesupport-bn1 = ["dep:tango-gamesupport-bn1"]
gamesupport-bn2 = ["dep:tango-gamesupport-bn2"]
gamesupport-bn3 = ["dep:tango-gamesupport-bn3"]
gamesupport-bn4 = ["dep:tango-gamesupport-bn4"]
gamesupport-bn5 = ["dep:tango-gamesupport-bn5"]
gamesupport-bn6 = ["dep:tango-gamesupport-bn6"]
gamesupport-exe45 = ["dep:tango-gamesupport-exe45"]
gamesupport-all = [
    "gamesupport-bn1",
    "gamesupport-bn2",
    "gamesupport-bn3",
    "gamesupport-bn4",
    "gamesupport-bn5",
    "gamesupport-bn6",
    "gamesupport-exe45",
]

[lints]
workspace = true
