# Deliberately its own workspace root, and excluded from the one at the
# repo root.
#
# The patch repo's CI has to build the bundler, and it can't use the
# tango workspace to do that: that workspace's `tango` member depends on
# the private `gamesupport` submodule, so any checkout a public runner
# can make fails to load it. Standing alone means a sparse checkout of
# this one directory builds — see the patches repo's pages workflow.
#
# The cost is that dep versions are spelled out here instead of inherited
# from the root's `[workspace.dependencies]`. That doesn't reintroduce
# the duplicate-dependency problem that table exists to prevent: when
# tango builds this crate as a path dependency, resolution happens in
# tango's graph and unifies as usual. This crate's own lock is used only
# for standalone builds, and is committed so CI is reproducible.
[workspace]

[package]
name = "tango-patch"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

# The bundler. Patch authors and the patch repo's CI use it to build and
# index `.tangopatch` packages; the app only needs the library, so the
# binary (and its clap/anyhow deps) is behind a feature.
[[bin]]
name = "tango-patch"
path = "src/bin/tango-patch.rs"
required-features = ["cli"]

[dependencies]
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
unic-langid = { version = "0.9", features = ["likelysubtags"] }

serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
# `deflate` only: packages are plain zips, and dropping the default
# feature set keeps bzip2/zstd/aes out of the bundler's dep graph.
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

# The manifest/tag/layout core is always compiled; the three modules that
# do I/O are opt-in, because no consumer wants all of them. The app reads
# packages and the index but never writes a package; the bundler writes
# them without needing the reader.
#
# `cargo test --all-features` (from this directory) runs the full suite —
# `tests/` covers the combinations, so it needs every feature on.
[features]
default = []
package = ["dep:zip"]
bundle = ["dep:zip", "dep:sha2"]
index = ["dep:serde_json", "dep:sha2"]
cli = ["package", "bundle", "index", "dep:anyhow", "dep:clap"]

# Mirrors the tango workspace's allow-list for the lints this crate
# would otherwise trip; it can't inherit them from a workspace it is no
# longer a member of.
[lints.clippy]
type_complexity = "allow"
