[package]
name = "tango-pvp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byteorder.workspace = true
bytemuck.workspace = true
log.workspace = true
image.workspace = true
mgba.workspace = true
prost.workspace = true
rand.workspace = true
rand_pcg.workspace = true
serde.workspace = true
serde_repr = "0.1"
getgud = { path = "../getgud" }
shell-words = "1"
tango-dataview = { path = "../tango-dataview" }
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
zstd.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
