[package]
name = "tango-pvp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytemuck.workspace = true
log.workspace = true
mgba.workspace = true
prost.workspace = true
serde.workspace = true
serde_repr = "0.1"
getgud.workspace = true
mgba-siolink.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
zstd.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
